--- a/src/styles/Portfolio.css
+++ b/src/styles/Portfolio.css
@@ -18,33 +18,33 @@
 }
 
 .gallery__item--1 {
-    grid-column: 1/3;
+    grid-column: 1/2;
     grid-row: 1/3;
 }
 
 .gallery__item--2 {
-    grid-column: 3/3;
-    grid-row: 1/ span 1;
+    grid-column: 1/2;
+    grid-row: 2/3;
 }
 
 .gallery__item--3 {
-    grid-column: 3/3;
-    grid-row: 2/ span 1;
+    grid-column: 1/2;
+    grid-row: 3/3;
 }
 
 .gallery__item--4 {
-    grid-column: 1/1;
-    grid-row: 3/ 3;
+    grid-column: 2/2;
+    grid-row: 1/ 3;
 }
 
 .gallery__item--5 {
-    grid-column: 2/3;
-    grid-row: 3/ span 1;
+    grid-column: 2/2;
+    grid-row: 2/3;
 }
 
 .gallery__item--6 {
-    grid-column: 1/3;
-    grid-row: 3/ span 2;
+    grid-column: 2/2;
+    grid-row: 3/3;
 }
 
 .gallery__img {
@@ -80,6 +80,7 @@
 .desc h4 {
     font-family: 'Times New Roman', Times, sans-serif;
     font-size: small;
+    color: #ffffff;
 }
 
 .desc p {
