--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,20 @@
   padding-top: 1rem;
 }
 
+.button {
+  width: 200px;
+  height: 50px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 15px;
+  letter-spacing: 2px;
+  font-weight: 600;
+  color: #0000;
+  background-color: rgb(6, 236, 6);
+  border: none;
+  border-radius: 50px;
+  outline: none;
+}
+
 .modal-footer {
   display: flex;
   flex-wrap: wrap;
