--- a/src/App.css
+++ b/src/App.css
@@ -94,10 +94,14 @@
   vertical-align: middle;
   width: 200px;
   height: 280px;
+  border-radius: 80%;
 }
 
 .about-row {
+  background-image: url('assets/images/clouds.jpg');
   height: 300px;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .header {
