--- a/src/App.css
+++ b/src/App.css
@@ -92,8 +92,8 @@
 .myImg {
   padding-top: 10px;
   vertical-align: middle;
-  width: 200px;
-  height: 280px;
+  width: 30%;
+  height: 80%;
   border-radius: 80%;
 }
 
