--- a/src/styles/Portfolio.css
+++ b/src/styles/Portfolio.css
@@ -3,6 +3,11 @@
     --secondary-color: #98cbe0;
 }
 
+.card,
+.card-body {
+    background-color: #8050c8;
+}
+
 .grid-container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -64,9 +69,8 @@
     padding: 4px 4px;
     position: absolute;
     top: 4px;
-    font-size: small;
     overflow-wrap: break-word;
-    width: 120px;
+    width: 100%;
 }
 
 .links {
@@ -74,12 +78,11 @@
     bottom: 5px;
     font-size: small;
     overflow-wrap: break-word;
-    width: 120px;
+    width: 80%;
 }
 
 .desc h4 {
     font-family: 'Times New Roman', Times, sans-serif;
-    font-size: small;
     color: #ffffff;
 }
 
