--- a/src/styles/Portfolio.css
+++ b/src/styles/Portfolio.css
@@ -7,7 +7,9 @@
 .card-body {
     background-color: #8050c8;
 }
-
+.card-body2{
+    background-color: #040113;
+}
 .skillList {
     list-style-type: none;
 }
